Add swagger security policy for session cookies
